labs/examples/design-patterns-examples/src/com/examples/design/solid/i/good/IWorkable.java
package com.examples.design.solid.i.good;

public interface IWorkable {
    public void work();
}
